# beetmash

./: .gitignore  Cargo.toml  README.md  justfile
.cargo/: config.toml
.github/workflows/: release.yml  test.yml
crates/beetmash_core/: Cargo.toml
crates/beetmash_core/scenes/: space-scene.ron  ui-terminal.ron
crates/beetmash_core/src/: lib.rs
crates/beetmash_core/src/components/: mod.rs  ui_terminal.rs
crates/beetmash_core/src/export/: beetmash_exporter.rs  misc_scene_utils.rs  mod.rs
crates/beetmash_core/src/extensions/: mod.rs
crates/beetmash_core/src/ik_solver/: ik_solver.rs  mod.rs
crates/beetmash_core/src/net/: default_replicate_plugin.rs  mod.rs
crates/beetmash_core/src/plugins/: beetmash_full_plugins.rs  mod.rs
crates/beetmash_core/src/render/: beetmash_default_plugins.rs  block_app_ready.rs  default_placeholder_plugin.rs  mod.rs  screenshot.rs
crates/beetmash_core/src/scene/: mod.rs  spawn_scene_file.rs
crates/beetmash_core/src/scene_utils/: filter.rs  misc_scene_utils.rs  mod.rs
crates/beetmash_core/src/scenes/: foxie.rs  hello_net.rs  mod.rs  setup_2d.rs  setup_3d.rs  ui_terminal.rs
crates/beetmash_core/src/test/: mod.rs
crates/beetmash_esp/: Cargo.toml
crates/beetmash_esp/.cargo/: config.toml
crates/beetmash_esp/examples/: avoid_obstacles.rs  blinky_rgb.rs  depth_sensor.rs  depth_sensor_smooth.rs  hello_bevy.rs  led.rs  motors.rs  net.rs  stepper.rs  wifi.rs
crates/beetmash_net/: Cargo.toml  README.md
crates/beetmash_net/examples/: client.rs  two_clients.rs
crates/beetmash_net/src/: lib.rs
crates/beetmash_net/src/events/: common_events.rs  mod.rs  screenshot.rs  spawn_scene_file.rs
crates/beetmash_net/src/networking/: default_transport_plugin.rs  mod.rs  transport_plugin.rs
crates/beetmash_net/src/replication/: incoming.rs  mod.rs  replicate_component.rs  replicate_event.rs  replicate_observer.rs  replicate_plugin.rs  replicate_registry.rs  replicate_registry_exporter.rs  replicate_resource.rs
crates/beetmash_net/src/tokio_client/: native_client_plugin.rs
crates/beetmash_net/src/utils/: build_replication_registry.rs  mod.rs  parse_utils.rs
crates/beetmash_net/src/web_transport/: web_event_client.rs  web_postmessage_client.rs  web_ws_client.rs
crates/beetmash_scene/: Cargo.toml
crates/beetmash_scene/examples/: export_test_scene.rs  test_scene.rs
crates/beetmash_scene/src/: lib.rs
crates/beetmash_scene/src/scene_exporter/: dynamic_scene_checks.rs  mod.rs  scene_export_config.rs  scene_exporter.rs  scene_group_exporter.rs
crates/beetmash_scene/src/scene_utils/: load_scenes.rs  mod.rs  save_scene.rs
crates/beetmash_scene/src/test/: observers_test_utils.rs
crates/beetmash_scene/src/type_registry_exporter/: export_ts.rs  into_json_schema.rs  json_schema.rs  mod.rs  serde_type_info.rs  serde_type_registration.rs  serde_type_registry.rs  type_registry_exporter.rs  typescript_exporter.rs
crates/beetmash_scene/src/utils/: animation_graph_placeholder.rs  asset_placeholder.rs  beetmash_scene_builder.rs  bundle_placeholder.rs  dynamic_scene_checks.rs  handle_wrapper.rs  load_scenes.rs  mod.rs  most_default_plugins.rs  save_scene.rs  scene_exporter.rs  spawn_scene.rs  spawn_scene_file.rs
crates/beetmash_server/: Cargo.toml
crates/beetmash_server/examples/: server.rs
crates/beetmash_server/src/server/: lobby_client.rs  server.rs
crates/beetmash_template/: Cargo.toml  README.md  index.html  justfile
crates/beetmash_template/examples/: base_app.rs  build_scenes.rs  export_scenes.rs  simple_app.rs
crates/beetmash_template/public/: index.html
crates/beetmash_template/scenes/: my-base-scene.json  my-beautiful-scene.json  my_base_scene.json  simple_environment.ron  simple_scene.ron
crates/beetmash_template/src/: base_app.rs  export_scenes.rs  lib.rs  placeholders.rs  simple_plugin.rs  simple_scene.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/cli/src/subcommands/: build_web.rs  mod.rs
examples/: app.rs  build_scenes.rs  build_types.rs  export_scenes.rs  export_type_registry.rs  export_typescript.rs  ik_solver.rs  terminal.rs  terminal_populated.rs  tmp.rs
scenes/: camera-2d.json  camera-2d.ron  camera-3d.json  camera-3d.ron  ground-3d.json  ground-3d.ron  lighting-3d.json  lighting-3d.ron  space-scene.json  ui-terminal-input.json  ui-terminal-input.ron  ui-terminal.json
src/: lib.rs
