#💡 Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

#💡 Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace.package]
version = "0.0.5"
edition = "2021"
description = "The number one bevy scene registry."
documentation = "https://beetmash.com/docs/beetmash"
readme = "README.md"
homepage = "https://beetmash.com"
repository = "https://github.com/mrchantey/beetmash"
license = "MIT OR Apache-2.0"
keywords = ["beetmash", "behavior", "game-ai", "robotics"]
categories = [
	"science::robotics",
	"game-development",
	"simulation",
	"wasm",
	"embedded",
]
publish = false


[workspace]
resolver = "2"
members = [
	"crates/beetmash_core",
	"crates/beetmash_net",
	"crates/beetmash_server",
	"crates/beetmash_template",
	"crates/cli",
]
exclude = ["crates/beetmash_esp"]


[workspace.dependencies]
#💡 internal
beetmash = { path = "./", version = "0.0.5" }
beetmash_core = { path = "crates/beetmash_core", version = "0.0.5" }
beetmash_net = { path = "crates/beetmash_net", version = "0.0.5" }
beetmash_server = { path = "crates/beetmash_server", version = "0.0.5" }

#💡 local-relative
forky_core = { path = "../forky/crates/forky_core" }
forky_bevy = { path = "../forky/crates/forky_bevy" }
forky_web = { path = "../forky/crates/forky_web", default-features = false }
sweet = { path = "../sweet", features = ["bevy"] }

#💡 local-published
# forky_core = "0.1.50"
# forky_bevy = "0.1.50"
# forky_web = "0.1.50"
# sweet = { version = "0.1.50", features = ["bevy"] }

#💡 Utility
log = "0.4"
pretty_env_logger = "0.4"
console_log = { version = "1.0", features = ["color"] }
anyhow = "1.0.75"
extend = "1.1.2"
strum = { version = "0.26.0", features = ["derive"] }
strum_macros = "0.26.0"
rand = "0.8"

#💡 IO
serde = { version = "1", features = ["derive"] }


#💡 Async
tokio = { version = "1.35", features = ["full"] }
futures-util = { version = "0.3", default-features = false, features = [
	"sink",
	"std",
] }
tokio-tungstenite = { version = "0.21" }
futures = "0.3"


#💡 Web
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"


#💡 Game
# bevy = { version = "0.14", default-features = false, features = [
# 	"bevy_scene",
# 	"serialize",
# 	# "bevy_color",
# ] }
#💡 observer reflect attributes, required until 0.14.1
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "b8416b3043eb5d2a49c6044e9680f0c5f189f243", default-features = false, features = [
	"bevy_scene",
	"serialize",
	# "bevy_color",
] }


[package]
name = "beetmash"
publish = true
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true


[features]
default = ["net"]
net = ["dep:beetmash_net"]
tokio = ["beetmash_net/tokio"]
test = ["beetmash_core/test"]
render = ["bevy/bevy_render", "beetmash_net/render"]

[dependencies]
bevy.workspace = true
beetmash_core.workspace = true
beetmash_net = { workspace = true, optional = true }

[workspace.dependencies.web-sys]
# [target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
	# HTML
	'Headers',
	'Document',
	'Element',
	'Window',
	"Cache",
	"CacheStorage",
	'HtmlIFrameElement',
	'DomRectReadOnly',
	# Style
	'MediaQueryList',
	# Events
	'MouseEvent',
	'KeyboardEvent',
	'CustomEvent',
	'CustomEventInit',
	# JS
	'Gpu',
	'console',
	'Navigator',
	'Performance',
	# Fetch
	'Request',
	'RequestInit',
	'RequestMode',
	'Response',
	# Blob
	'Blob',
	'BlobEvent',
	'BlobEventInit',
	'BlobPropertyBag',
	# Elements
	'HtmlAnchorElement',
	'HtmlCanvasElement',
	'HtmlInputElement',
	'File',
	'FileList',
	# Url
	'Url',
	'History',
	'Location',
	'UrlSearchParams',
	# indexedDB
	"IdbCursor",
	"IdbCursorDirection",
	"IdbCursorWithValue",
	"IdbDatabase",
	"IdbFactory",
	"IdbFileHandle",
	"IdbFileMetadataParameters",
	"IdbFileRequest",
	"IdbIndex",
	"IdbIndexParameters",
	"IdbKeyRange",
	"IdbLocaleAwareKeyRange",
	"IdbMutableFile",
	"IdbObjectStore",
	"IdbObjectStoreParameters",
	"IdbOpenDbOptions",
	"IdbOpenDbRequest",
	"IdbRequest",
	"IdbRequestReadyState",
	"IdbTransaction",
	"IdbTransactionMode",
	"IdbVersionChangeEvent",
	"IdbVersionChangeEventInit",
]
