#💡 Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

#💡 Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace.package]
version = "0.0.6-rc.1"
edition = "2021"
description = "The number one bevy scene registry."
documentation = "https://beetmash.com/docs/beetmash"
readme = "README.md"
homepage = "https://beetmash.com"
repository = "https://github.com/mrchantey/beetmash"
license = "MIT OR Apache-2.0"
keywords = ["beetmash", "behavior", "game-ai", "robotics"]
categories = [
	"science::robotics",
	"game-development",
	"simulation",
	"wasm",
	"embedded",
]
publish = false


[workspace]
resolver = "2"
members = [
	"crates/beetmash_scene",
	"crates/beetmash_core",
	"crates/beetmash_net",
	"crates/beetmash_server",
	"crates/beetmash_template",
	"crates/cli",
]
exclude = ["crates/beetmash_esp"]


[workspace.dependencies]
#💡 internal
beetmash = { path = "./", version = "0.0.6-rc.1" }
beetmash_core = { path = "crates/beetmash_core", version = "0.0.6-rc.1" }
beetmash_net = { path = "crates/beetmash_net", version = "0.0.6-rc.1" }
beetmash_scene = { path = "crates/beetmash_scene", version = "0.0.6-rc.1" }
beetmash_server = { path = "crates/beetmash_server", version = "0.0.6-rc.1" }

#💡 local-relative
forky_core = { version = "0.1.51", path = "../forky/crates/forky_core" }
forky_bevy = { version = "0.1.51", path = "../forky/crates/forky_bevy" }
forky_web = { version = "0.1.51", path = "../forky/crates/forky_web", default-features = false }
sweet = { version = "0.1.51", path = "../sweet", features = ["bevy"] }

#💡 local-published
# forky_core = "0.1.50"
# forky_bevy = "0.1.50"
# forky_web = "0.1.50"
# sweet = { version = "0.1.50", features = ["bevy"] }

#💡 Utility
log = "0.4"
pretty_env_logger = "0.4"
console_log = { version = "1.0", features = ["color"] }
anyhow = "1.0.75"
extend = "1.1.2"
strum = { version = "0.26.0", features = ["derive"] }
strum_macros = "0.26.0"
rand = "0.8"

#💡 IO
serde = { version = "1", features = ["derive"] }


#💡 Async
tokio = { version = "1.35", features = ["full"] }
futures-util = { version = "0.3", default-features = false, features = [
	"sink",
	"std",
] }
tokio-tungstenite = { version = "0.21" }
futures = "0.3"


#💡 Web
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"


#💡 Game
# bevy = { version = "0.14", default-features = false, features = [
# 	"bevy_scene",
# 	"serialize",
# 	# "bevy_color",
# ] }
#💡 observer reflect attributes, required until 0.14.1
bevy = { version = "0.14", path = "../bevy", default-features = false }


[package]
name = "beetmash"
publish = true
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true


[features]
default = ["render", "net"]
net = ["dep:beetmash_net"]
tokio = ["beetmash_net/tokio"]
test = ["beetmash_core/test"]
scene = ["dep:beetmash_scene", "beetmash_core/scene"]
render = ["scene", "beetmash_core/render", "bevy/bevy_render"]

[dependencies]
bevy.workspace = true
beetmash_core.workspace = true
beetmash_scene = { workspace = true, optional = true }
beetmash_net = { workspace = true, optional = true }

[workspace.dependencies.web-sys]
# [target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
	# HTML
	'Headers',
	'Document',
	'Element',
	'Window',
	"Cache",
	"CacheStorage",
	'HtmlIFrameElement',
	'DomRectReadOnly',
	# Style
	'MediaQueryList',
	# Events
	'MouseEvent',
	'KeyboardEvent',
	'CustomEvent',
	'CustomEventInit',
	# JS
	'Gpu',
	'console',
	'Navigator',
	'Performance',
	# Fetch
	'Request',
	'RequestInit',
	'RequestMode',
	'Response',
	# Blob
	'Blob',
	'BlobEvent',
	'BlobEventInit',
	'BlobPropertyBag',
	# Elements
	'HtmlAnchorElement',
	'HtmlCanvasElement',
	'HtmlInputElement',
	'File',
	'FileList',
	# Url
	'Url',
	'History',
	'Location',
	'UrlSearchParams',
	# indexedDB
	"IdbCursor",
	"IdbCursorDirection",
	"IdbCursorWithValue",
	"IdbDatabase",
	"IdbFactory",
	"IdbFileHandle",
	"IdbFileMetadataParameters",
	"IdbFileRequest",
	"IdbIndex",
	"IdbIndexParameters",
	"IdbKeyRange",
	"IdbLocaleAwareKeyRange",
	"IdbMutableFile",
	"IdbObjectStore",
	"IdbObjectStoreParameters",
	"IdbOpenDbOptions",
	"IdbOpenDbRequest",
	"IdbRequest",
	"IdbRequestReadyState",
	"IdbTransaction",
	"IdbTransactionMode",
	"IdbVersionChangeEvent",
	"IdbVersionChangeEventInit",
]
