[package]
name = "beetmash_core"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true


[features]
default = []
test = ["dep:sweet"]

[dependencies]
bevy.workspace = true
log.workspace = true
anyhow.workspace = true
extend.workspace = true
sweet = { workspace = true, optional = true }

[dev-dependencies]
sweet.workspace = true
