[package]
name = "beetmash_esp"
version = "0.0.1"
edition = "2021"
resolver = "2"
rust-version = "1.77"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]
# default = ["std", "embassy", "esp-idf-svc/native", "net"]
# beet = ["dep:beet"]
# net = ["beetmash/net"]

std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
	"esp-idf-svc/embassy-sync",
	"esp-idf-svc/critical-section",
	"esp-idf-svc/embassy-time-driver",
]

[dependencies]
# beet = { path = "../../../beet", optional = true, default-features = false }
# beetmash = { path = "../../", optional = true, default-features = false }
forky_core = "0.2.0-rc.1"

bevy = { version = "0.14", default-features = false }
# bevy = { version = "0.15.0-dev", path = "/home/pete/me-temp/bevy-pre-map-entities", default-features = false }
# bevy = { version = "0.15.0-dev", git = "https://github.com/jrobsonchase/bevy", branch = "pre_map_entities", default-features = false }

anyhow = "1.0.75"
log = { version = "0.4", default-features = false }

flume = "0.11"

embedded-svc = "0.28"
embedded-hal = "1.0.0"
esp-idf-hal = "0.44"
esp-idf-sys = "0.35"
esp-idf-svc = { version = "0.49", default-features = false }
# match https://github.com/esp-rs/embedded-svc/blob/master/Cargo.toml
heapless = "0.8"

serde = { version = "1.0.193", features = ["derive"] }
bincode = "1.3"


futures = "0.3.30"
dotenv_codegen = "0.15.0"

[build-dependencies]
embuild = "0.32.0"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp_websocket_client", version = "1.1.0" }


[[example]]
name = "avoid_obstacles"
path = "examples/avoid_obstacles.rs"
required-features = ["beet"]

[[example]]
name = "blinky_rgb"
path = "examples/blinky_rgb.rs"
required-features = ["beet"]
[[example]]
name = "depth_sensor"
path = "examples/depth_sensor.rs"
required-features = ["beet"]

[[example]]
name = "depth_sensor_smooth"
path = "examples/depth_sensor_smooth.rs"
required-features = ["beet"]

[[example]]
name = "motors"
path = "examples/motors.rs"
required-features = ["beet"]

[[example]]
name = "net"
path = "examples/net.rs"
required-features = ["net"]

[[example]]
name = "wifi"
path = "examples/wifi.rs"
required-features = ["net"]
