[package]
name = "beetmash_scene"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true


[features]
default = ["scene"]
scene = ["bevy/bevy_scene", "bevy/serialize"]
render = []
test = ["dep:sweet"]


[dependencies]
bevy.workspace = true
log.workspace = true
anyhow.workspace = true
serde.workspace = true
extend.workspace = true
sweet = { workspace = true, optional = true }

[dev-dependencies]
sweet.workspace = true
