[package]
name = "beetmash_scene"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true


[features]
default = ["render"]
render = [
	"scene",
	# TODO being more granular will speed up compile times
	"bevy/default",
	# "bevy/bevy_asset",
	# "bevy/animation",
	# "bevy/bevy_core_pipeline",
]
scene = ["bevy/bevy_scene", "bevy/serialize"]
test = ["dep:sweet"]


[dependencies]
forky_core.workspace = true
bevy.workspace = true
log.workspace = true
anyhow.workspace = true
serde.workspace = true
extend.workspace = true
sweet = { workspace = true, optional = true }

[dev-dependencies]
sweet.workspace = true
