[package]
name = "beetmash-cli"
version.workspace = true
edition.workspace = true
description = "CLI tools for managing Beetmash projects."
documentation.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = true
