[package]
name = "beetmash-cli"
# version.workspace = true
version.workspace = true
edition.workspace = true
description = "CLI tools for managing Beetmash projects."
documentation.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = true

[[bin]]
name = "beetmash"
path = "src/main.rs"


[dependencies]
anyhow.workspace = true
forky = { workspace = true, features = ["fs"] }
clap = { version = "4.5", features = [] }
